force-app/main/default/objects/Lead/fields/Enquiry_Key__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Key__c</fullName>
    <description>Contact + Event Name; blocks a second enquiry for the same person and event.</description>
    <externalId>true</externalId>
    <label>Enquiry Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>