force-app/main/default/objects/Lead/fields/Event_Registry__c.field-meta.xml
<CustomField>
    <fullName>Event_Registry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The event this enquiry came from (Event Registry name).</description>
    <label>Event Name</label>
    <referenceTo>Event_Registry__c</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>